k8s/applications/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  selector:
    matchLabels:
      app: mealie
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: mealie
          image: hkotel/mealie:v3.19.2
          ports:
            - name: ingress
              containerPort: 9000
          volumeMounts:
            - name: mealie
              mountPath: /app/data
      volumes:
        - name: mealie
          persistentVolumeClaim:
            claimName: mealie
      resources:
        limits:
          memory: 1Gi
        requests:
          cpu: 10m
          memory: 1Gi
