k8s/applications/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
